<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_5_text_"
        app:layout_constraintBottom_toTopOf="@+id/seekBar3"
        app:layout_constraintStart_toStartOf="@+id/seekBar3" />

    <SeekBar
        android:id="@+id/seekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:indeterminate="false"
        android:max="100000"
        android:progress="10000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_1_text"
        app:layout_constraintBottom_toTopOf="@+id/seekBar"
        app:layout_constraintStart_toStartOf="@+id/seekBar" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_2_text_"
        app:layout_constraintEnd_toEndOf="@+id/seekBar"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <SeekBar
        android:id="@+id/seekBar2"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:max="50"
        android:progress="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_3_text_"
        app:layout_constraintBottom_toTopOf="@+id/seekBar2"
        app:layout_constraintStart_toStartOf="@+id/seekBar2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_4_text_"
        app:layout_constraintEnd_toEndOf="@+id/seekBar2"
        app:layout_constraintTop_toBottomOf="@+id/seekBar2" />

    <SeekBar
        android:id="@+id/seekBar3"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:max="250000"
        android:progress="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_6_text_"
        app:layout_constraintEnd_toEndOf="@+id/seekBar3"
        app:layout_constraintTop_toBottomOf="@+id/seekBar3" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="196dp"
        android:text="@string/btn_text_"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar3" />
</androidx.constraintlayout.widget.ConstraintLayout>